# DRLS

./: .gitignore
DRLS/DRLS_src/tools/clangformat/: BraceBreaker.h  Format.cpp
DRLS/build-DRLS_src-GCC-Debug/: CMakeCache.txt  DRLS_src  build.ninja  cmake_install.cmake  rules.ninja
DRLS/build-DRLS_src-GCC-Debug/DRLS_src_autogen/: mocs_compilation.cpp
DRLS/build-DRLS_src-GCC-Debug/DRLS_src_autogen/I4GCU72TZY/: moc_MainWindow.cpp
DRLS/build-DRLS_src-GCC-Debug/DRLS_src_autogen/include/: ui_MainWindow.h
DRLS_docs/: Eredetiség nyilatkozat.doc
DRLS_docs/src/: README_hu.md  elteikthesis.bib  elteikthesis.cls  elteikthesis_hu.tex
DRLS_docs/src/samples_hu/: 01_intro.tex  02_user.tex  03_impl.tex  04_sum.tex
DRLS_src/: CMakeLists.txt
DRLS_src/client/src/: MainWindow.cpp  MainWindow.h  MainWindow.ui  MasterDetailWidget.cpp  MasterDetailWidget.h  MasterDetailWidget.ui  main.cpp
DRLS_src/client/src/details/: FruitDetailsWidget.cpp  FruitDetailsWidget.h  FruitDetailsWidget.ui  UserDetailsWidget.cpp  UserDetailsWidget.h  UserDetailsWidget.ui
DRLS_src/client/src/dialogs/: FruitUserRelationsDialog.cpp  FruitUserRelationsDialog.h  FruitUserRelationsDialog.ui
DRLS_src/client/src/tabs/: FruitsTab.cpp  FruitsTab.h  FruitsTab.ui  UsersTab.cpp  UsersTab.h  UsersTab.ui
DRLS_src/client/src/tabs/base/: MasterDetailWidhetBase.h
DRLS_src/common/src/: AsyncTask.cpp  AsyncTask.h  CallerContext.h  Delegate.cpp  Delegate.h  EntityCache.cpp  EntityCache.h  LockableResource.h  TaskManager.cpp  TaskManager.h  TasksUpdatedSignalProxy.cpp  TasksUpdatedSignalProxy.h
DRLS_src/common/src/service/: AsyncTaskService.cpp  AsyncTaskService.h  DelayedResourceLockService.cpp  DelayedResourceLockService.h  DelayedResourceLockService.h.autosave  EntityService.cpp  EntityService.h  IDelayedResourceLockService.h  ResourceLockService.cpp  ResourceLockService.h
DRLS_src/common/src/service/EntityServiceSpecializations/: AdministratorEntityService.cpp  FruitEntityService.cpp  UserEntityService.cpp
DRLS_src/common/src/service/interface/: IDelayedResourceLockService.h  IResourceLockService.h  IService.h
DRLS_src/persistence/: Administrator.cpp  Administrator.h  Entity.cpp  Entity.h  EntityType.cpp  EntityType.h  Fruit.cpp  Fruit.h  User.cpp  User.h
DRLS_src/tools/clangformat/: BraceBreaker.cpp  clang-format
DRLS_src/utils/: Callback.h  Finally.h  ThreadHelper.cpp  ThreadHelper.h
